# homebase

./: .env.example  LICENSE  README.md  pyproject.toml
homebase/: cli.py  config.py  models.py
homebase/renderers/: obsidian.py
homebase/utils/: __init__.py  fingerprint.py  timefmt.py
templates/: daily.md.j2  master.md.j2
